# softice-mcp

./: .gitignore  README.md  mcp_server.py  pyproject.toml  start_softice_bridge.sh
softice_mcp/: bp_composer.py  driver.py  parsers.py  profiling.py  server.py  softice.py
tests/: test_bp_composer.py  test_driver_reconnect.py  test_parsers.py  test_server_addr_context_and_bp.py  test_server_send_keys.py  test_server_wait_for_popup.py  test_softice_transport.py
